[package]
name = "bluetooth-speaker-snatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
bluez-async = "0.7.2"
eyre = "0.6.8"
figment = { version = "0.10.10", features = ["toml", "env"] }
futures-util = { version = "0.3.28", default-features = false }
serde = { version = "1.0.171", features = ["derive"] }
serde_millis = "0.1.1"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["serde"] }
